@@ -1,8 +1,8 @@
 Package: momentuHMM
 Type: Package
 Title: Maximum Likelihood Analysis of Animal Movement Behavior Using Multivariate Hidden Markov Models
-Version: 1.5.3
-Date: 2021-07-06
+Version: 1.5.4
+Date: 2021-07-21
 Depends:
     R (>= 2.10)
 Author: Brett McClintock, Theo Michelot
